# youtube-music-player

./: LICENSE  Makefile  README.md  pyproject.toml
yt-music-player/: __main__.py
